fixed href links in navbar

--- a/Services.html
+++ b/Services.html
@@ -26,10 +26,10 @@
             <i class="fa-solid fa-martini-glass-citrus"></i>
         </span>
         <div class="navlinks">
-            <a href="/">Home</a>
-            <a href="/About.html">About</a>
-            <a href="/Services.html" style="color: dodgerblue;">Services</a>
-            <a href="/Contact-Us.html">Contact Us</a>
+            <a href="/Swag-Dhaba/">Home</a>
+            <a href="/Swag-Dhaba/About.html">About</a>
+            <a href="/Swag-Dhaba/Services.html" style="color: dodgerblue;">Services</a>
+            <a href="/Swag-Dhaba/Contact-Us.html">Contact Us</a>
         </div>
     </nav>
 </body>
