--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <i class="fa-solid fa-martini-glass-citrus"></i>
         </span>
         <div class="navlinks">
-            <a href="/" style="color: dodgerblue;">Home</a>
-            <a href="/About.html">About</a>
-            <a href="/Services.html">Services</a>
-            <a href="/Contact-Us.html">Contact Us</a>
+            <a href="/Swag-Dhaba/" style="color: dodgerblue;">Home</a>
+            <a href="/Swag-Dhaba/About.html">About</a>
+            <a href="/Swag-Dhaba/Services.html">Services</a>
+            <a href="/Swag-Dhaba/Contact-Us.html">Contact Us</a>
         </div>
     </nav>
 
